[package]
name = "packer"
version = "0.2.1"
edition = "2024"
authors = ["d0mkaaa <rutkauskasdomantas@gmail.com>"]
description = "A modern, fast package manager for Arch Linux written in Rust"
license = "MIT"
repository = "https://github.com/d0mkaaa/packer"
homepage = "https://github.com/d0mkaaa/packer"
documentation = "https://docs.rs/packer"
readme = "README.md"
keywords = ["package-manager", "arch-linux", "aur", "dependency", "cli", "pacman-free"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]
rust-version = "1.88"

[package.metadata]
msrv = "1.88"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.23"
anyhow = "1.0"
thiserror = "1.0.69"
clap = { version = "4.0", features = ["derive", "color"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
whoami = "1.4"
dirs = "5.0.1"
sha2 = "0.10"
tempfile = "3.8"
colored = "2.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
semver = { version = "1.0.26", features = ["serde"] }
directories = "5.0.1"
indicatif = { version = "0.17.11", features = ["tokio"] }
lazy_static = "1.4"
futures = "0.3"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4.4"
zip = "0.6.6"
libc = "0.2"
crossbeam = "0.8"
dashmap = "5.5.3"
petgraph = "0.6.5"
regex = "1.10"
url = "2.5"
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"
xz2 = "0.1"
zstd = "0.13"
num_cpus = "1.16"
parking_lot = "0.12"
once_cell = "1.19"
bytes = "1.5"
mime = "0.3"
base64 = "0.22"
hex = "0.4"
rustls = { version = "0.22.4", features = ["ring"] }
rustls-webpki = "0.102.8"
webpki-roots = "0.26.11"
async-compression = { version = "0.4.19", features = ["tokio", "gzip", "bzip2", "xz", "zstd"] }
async-trait = "0.1"
pin-project = "1.1"
which = "6.0.3"
shellexpand = "3.1"
fuzzy-matcher = "0.3"
console = "0.15.11"
dialoguer = "0.11"
similar = "2.4"
git2 = { version = "0.18.3", optional = true, default-features = false, features = ["https"] }

[features]
default = ["git"]
git = ["git2"]
minimal = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 0
overflow-checks = true

[[bin]]
name = "packer"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
